--- a/index.html
+++ b/index.html
@@ -162,20 +162,6 @@
                         </div>
                     </div>
                     <div class="skill-item-enhanced">
-                        <i class="devicon-html5-plain colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">HTML</div>
-                        <div class="skill-level">Proficient</div>
-                        </div>
-                    </div>
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-css3-plain colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">CSS</div>
-                        <div class="skill-level">Proficient</div>
-                        </div>
-                    </div>
-                    <div class="skill-item-enhanced">
                         <i class="devicon-javascript-plain colored skill-icon"></i>
                         <div>
                         <div class="skill-name">JavaScript</div>
@@ -187,58 +173,52 @@
 
                 <!-- Frameworks & Tools -->
                 <div class="skills-category">
-                    <h4>Frameworks & Tools</h4>
+                    <h4>Web Development and Frameworks</h4>
                     <div class="skills-list">
-                    
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-bootstrap-plain colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">Bootstrap</div>
-                        <div class="skill-level">Proficient</div>
+
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-html5-plain colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">HTML</div>
+                            <div class="skill-level">Proficient</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-react-original colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">React</div>
-                        <div class="skill-level">Beginner</div>
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-css3-plain colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">CSS</div>
+                            <div class="skill-level">Proficient</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-tailwindcss-original colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">Tailwindcss</div>
-                        <div class="skill-level">Beginner</div>
+                        
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-bootstrap-plain colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">Bootstrap</div>
+                            <div class="skill-level">Proficient</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-spring-plain colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">Spring Framework</div>
-                        <div class="skill-level">Beginner</div>
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-react-original colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">React</div>
+                            <div class="skill-level">Beginner</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-git-plain colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">Git</div>
-                        <div class="skill-level">Intermediate</div>
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-tailwindcss-original colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">Tailwindcss</div>
+                            <div class="skill-level">Beginner</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-git-plain colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">Git</div>
-                        <div class="skill-level">Intermediate</div>
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-spring-plain colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">Spring Framework</div>
+                            <div class="skill-level">Beginner</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-github-original colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">GitHub</div>
-                        <div class="skill-level">Proficient</div>
-                        </div>
-                    </div>
                     </div>
                 </div>
 
@@ -246,20 +226,27 @@
                 <div class="skills-category">
                     <h4>Databases</h4>
                     <div class="skills-list">
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-mysql-plain colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">MySQL</div>
-                        <div class="skill-level">Proficient</div>
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-mysql-plain colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">MySQL</div>
+                            <div class="skill-level">Proficient</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="skill-item-enhanced">
-                        <i class="devicon-sqlite-plain colored skill-icon"></i>
-                        <div>
-                        <div class="skill-name">SQLite</div>
-                        <div class="skill-level">Proficient</div>
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-sqlite-plain colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">SQL Server</div>
+                            <div class="skill-level">Proficient</div>
+                            </div>
                         </div>
-                    </div>
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-firebase-plain colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">Firebase/Firestore</div>
+                            <div class="skill-level">Intermediate</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -271,6 +258,13 @@
                             <i class="devicon-godot-plain colored skill-icon"></i>
                             <div>
                             <div class="skill-name">Godot Engine</div>
+                            <div class="skill-level">Intermediate</div>
+                            </div>
+                        </div>
+                        <div class="skill-item-enhanced">
+                            <i class="devicon-renpy-plain colored skill-icon"></i>
+                            <div>
+                            <div class="skill-name">Renpy</div>
                             <div class="skill-level">Intermediate</div>
                             </div>
                         </div>
@@ -326,10 +320,6 @@
                         <span class="tech-tag">MySQL</span>
                         <span class="tech-tag">Bootstrap</span>
                         <span class="tech-tag">Chatbase API</span>
-                        <span class="tech-tag">XAMMP</span>
-                        <span class="tech-tag">HTML</span>
-                        <span class="tech-tag">CSS</span>
-                        <span class="tech-tag">JavaScript</span>
                     </div>
 
                     <div class="project-links">
@@ -421,6 +411,17 @@
                         </a>
                     </div>
                 </article>
+            </div>
+            <!-- View More Projects Button -->
+            <div class="projects-cta">
+                <a href="https://github.com/IanChristopherTandog" class="view-more-btn" target="_blank" rel="noopener noreferrer">
+                    <span>View More Projects</span>
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                        <polyline points="15,3 21,3 21,9"></polyline>
+                        <line x1="10" y1="14" x2="21" y2="3"></line>
+                    </svg>
+                </a>
             </div>
         </div>
     </section>
