Added some files and removed redundant codes

--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
                         <a href="https://github.com/IanChristopherTandog/Web-based-Appointment-System-with-Inquiry-for-Minell-s-Hair-Nail-and-Lashes-Salon" class="project-link">
                             GitHub →
                         </a>
-                        <a href="https://github.com/IanChristopherTandog/Web-based-Appointment-System-with-Inquiry-for-Minell-s-Hair-Nail-and-Lashes-Salon" class="project-link">
+                        <!-- <a href="#" class="project-link">
                             Live Demo →
-                        </a>
+                        </a> -->
                     </div>
                 </article>
                 <article class="project-card">
@@ -380,9 +380,9 @@
                         <a href="https://github.com/IanChristopherTandog/warehouse-management-system" class="project-link">
                             GitHub →
                         </a>
-                        <a href="https://github.com/IanChristopherTandog/warehouse-management-system" class="project-link">
+                        <!-- <a href="#" class="project-link">
                             Live Demo →
-                        </a>
+                        </a> -->
                     </div>
                 </article>
                 <article class="project-card">
@@ -452,49 +452,6 @@
                         </p>
                     </div>
                 </div>
-
-                
-                <!-- <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-date">2020 - 2022</div>
-                        <h3 class="timeline-title">Lead Full Stack Developer</h3>
-                        <div class="timeline-company">GrowthStart Inc.</div>
-                        <p class="timeline-description">
-                            Scaled the platform from 10K to 1M+ users while maintaining 99.9% uptime. 
-                            Built and mentored a development team of 4, established CI/CD pipelines, 
-                            and implemented comprehensive testing strategies.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-date">2018 - 2020</div>
-                        <h3 class="timeline-title">Full Stack Developer</h3>
-                        <div class="timeline-company">DataFlow Analytics</div>
-                        <p class="timeline-description">
-                            Developed data visualization tools and real-time analytics dashboards. 
-                            Improved application performance by 60% through code optimization and 
-                            implemented automated testing reducing bugs by 80%.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <div class="timeline-date">2017 - 2018</div>
-                        <h3 class="timeline-title">Junior Developer</h3>
-                        <div class="timeline-company">WebSolutions Ltd.</div>
-                        <p class="timeline-description">
-                            Started my professional journey building responsive web applications and APIs. 
-                            Learned the fundamentals of scalable architecture and agile development practices 
-                            while contributing to 15+ client projects.
-                        </p>
-                    </div>
-                </div> -->
             </div>
         </div>
     </section>
