--- a/index.html
+++ b/index.html
@@ -388,13 +388,13 @@
                 <article class="project-card">
                     <div class="project-header">
                         <div>
-                            <h3 class="project-title">Dodge the Creeps</h3>
+                            <h3 class="project-title">Tank Battle</h3>
                             <div class="project-type">Personal</div>
                         </div>
                     </div>
                     
                     <p class="project-description">
-                        A simple game made in Godot Engine where you control a character to dodge incoming enemies for as long as possible.
+                        A 2D action game featuring player-controlled tanks with unlockable skills and buffs such as air strikes, shields, and power-ups. The game includes AI-driven enemy tanks and a challenging boss battle, showcasing gameplay mechanics, resource management, and smooth combat systems.
                     </p>
 
                     <div class="project-tech">
@@ -403,10 +403,10 @@
                     </div>
 
                     <div class="project-links">
-                        <a href="https://github.com/IanChristopherTandog/DodgeTheCreeps" class="project-link">
+                        <a href="https://github.com/IanChristopherTandog/Tank-Battle" class="project-link">
                             GitHub →
                         </a>
-                        <a href="https://ianchristophertandog.github.io/DodgeTheCreeps/" class="project-link">
+                        <a href="https://ianchristophertandog.github.io/Tank-Battle/" class="project-link">
                             Live Demo →
                         </a>
                     </div>
