--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         View My Work
                         <span>→</span>
                     </a>
-                    <a href="/resume.pdf" class="btn btn-secondary" download>
+                    <a href="assets/resume/IanChristopherTandog_Resume.pdf" class="btn btn-secondary" download>
                         Download Resume
                         <span>↓</span>
                     </a>
