--- a/index.html
+++ b/index.html
@@ -513,13 +513,17 @@
                     </a>
 
                     <a href="https://www.linkedin.com/in/ian-christopher-tandog-8a366b202/" class="contact-method">
-                        <div class="contact-icon">💼</div>
+                        <div class="contact-icon">                  
+                            <i class="devicon-linkedin-plain colored"></i>
+                        </div>
                         <div class="contact-label">LinkedIn</div>
                         <div class="contact-value">@ianchristophertandog</div>
                     </a>
 
                     <a href="https://github.com/ianchristophertandog" class="contact-method">
-                        <div class="contact-icon">🐙</div>
+                        <div class="contact-icon">
+                            <i class="devicon-github-original colored"></i>
+                        </div>
                         <div class="contact-label">GitHub</div>
                         <div class="contact-value">@ianchristophertandog</div>
                     </a>
