w q qa exit clear

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h2><span class="hero-highlight">Entry-Level Software Developer | Web & Game Development</span></h2>
                 
                 <p class="hero-subtitle">
-                    BSIT graduate and aspiring software developer with hands-on experience in <strong>full-stack web development</strong> and <strong>game development</strong>. Passionate about building scalable and user-friendly
+                    BSIT graduate and aspiring software developer with hands-on experience in <strong>full-stack web development</strong> and <strong>game development</strong>. Passionate about building scalable, user-friendly applications and continuously learning modern technologies.
                 </p>
 
                 <div class="hero-actions">
@@ -291,13 +291,13 @@
                 <article class="project-card">
                     <div class="project-header">
                         <div>
-                            <h3 class="project-title">Web-based Appointment System with Inquiry for Minell's Hair, Nail, and Lashes Salon</h3>
+                            <h3 class="project-title">Salon Management System</h3>
                             <div class="project-type">Academic</div>
                         </div>
                     </div>
                     
                     <p class="project-description">
-                        A full-stack web application designed to modernize salon operations by streamlining appointment scheduling, client inquiries, and admin management. The system improves operational efficiency while enhancing the customer experience..
+                        A full-stack web application designed to modernize salon operations by streamlining appointment scheduling, client inquiries, and admin management. The system improves operational efficiency while enhancing the customer experience.
                     </p>
 
                     <!-- <div class="project-metrics">
@@ -345,10 +345,10 @@
 
                     <div class="project-tech">
                         <span class="tech-tag">React</span>
-                        <span class="tech-tag">Tailwindcss</span>
+                        <span class="tech-tag">Tailwind CSS</span>
                     </div>
 
-                    <div class="project-links">
+                    <div class="project-links" aria-label="Project Link for Marci Metzger Real Estate Landing Page">
                         <a href="https://github.com/IanChristopherTandog/Marci-Metzger-Real-Estate" class="project-link">
                             GitHub →
                         </a>
