--- a/pages/projects.html
+++ b/pages/projects.html
@@ -203,3 +203,5 @@
     </section>
 </body>
 </html>
+
+<!-- I would like to add images beside the details from assets/images real-estate.png, salon.png, tank.png, -->
