fixed contact form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
 </head>
 <body>
         <!-- Navigation -->
@@ -370,17 +373,6 @@
                         <div class="contact-icon">📞</div>
                         <div class="contact-label">Phone</div>
                         <div class="contact-value">+63 976-1312-421</div>
-                    </a>
-                </div>
-
-                <div class="hero-actions">
-                    <a href="mailto:ictandog37@gmail.com?subject=Project Discussion" class="btn btn-primary">
-                        Start a Conversation
-                        <span>→</span>
-                    </a>
-                    <a href="/calendar" class="btn btn-secondary">
-                        Schedule a Call
-                        <span>📅</span>
                     </a>
                 </div>
             </div>
