--- a/index.html
+++ b/index.html
@@ -378,6 +378,8 @@
             </div>
         </div>
     </section>
+    <button id="backToTop" class="back-to-top"></button>
+
 
 
     <!-- Footer -->
