--- a/index.html
+++ b/index.html
@@ -239,7 +239,88 @@
         </div>
     </section>
 
-    <!-- Experience/Timeline Section -->
+    <!-- Project Modal -->
+    <div id="projectModal" class="modal">
+        <div class="modal-overlay"></div>
+        <div class="modal-container">
+            <button class="modal-close" aria-label="Close modal">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
+            </button>
+            
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <div class="modal-title-group">
+                        <h3 id="modalTitle" class="modal-title"></h3>
+                        <div id="modalType" class="project-type"></div>
+                    </div>
+                    <div id="modalTech" class="modal-tech"></div>
+                </div>
+
+                <!-- Image Gallery -->
+                <div class="modal-gallery">
+                    <div class="gallery-main">
+                        <img id="galleryMainImage" src="" alt="">
+                        <button class="gallery-nav gallery-prev" aria-label="Previous image">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="15 18 9 12 15 6"></polyline>
+                            </svg>
+                        </button>
+                        <button class="gallery-nav gallery-next" aria-label="Next image">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="9 18 15 12 9 6"></polyline>
+                            </svg>
+                        </button>
+                        <div class="gallery-counter">
+                            <span id="galleryCurrentIndex">1</span> / <span id="galleryTotalImages">1</span>
+                        </div>
+                    </div>
+                    <div id="galleryThumbnails" class="gallery-thumbnails"></div>
+                </div>
+
+                <!-- Project Details -->
+                <div class="modal-details">
+                    <div class="modal-section">
+                        <h4 class="modal-section-title">About This Project</h4>
+                        <div id="modalDescription" class="modal-description"></div>
+                    </div>
+
+                    <div class="modal-section">
+                        <h4 class="modal-section-title">Key Features</h4>
+                        <ul id="modalFeatures" class="modal-features"></ul>
+                    </div>
+
+                    <div class="modal-section" id="modalChallengesSection">
+                        <h4 class="modal-section-title">Technical Challenges & Solutions</h4>
+                        <div id="modalChallenges" class="modal-challenges"></div>
+                    </div>
+                </div>
+
+                <!-- Modal Actions -->
+                <div class="modal-actions">
+                    <a id="modalGithub" href="#" class="modal-btn modal-btn-secondary" target="_blank" rel="noopener noreferrer">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                        </svg>
+                        View on GitHub
+                    </a>
+                    <a id="modalDemo" href="#" class="modal-btn modal-btn-primary" target="_blank" rel="noopener noreferrer">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                            <polyline points="15,3 21,3 21,9"></polyline>
+                            <line x1="10" y1="14" x2="21" y2="3"></line>
+                        </svg>
+                        View Live Demo
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+        <!-- Experience/Timeline Section -->
     <section class="experience section" id="experience">
         <div class="container">
             <div class="section-header">
@@ -296,7 +377,6 @@
             </div>
         </div>
     </section>
-
     <!-- Contact Section -->
     <section class="contact section" id="contact">
         <div class="container">
