updated minor details

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <h1>
                     Ian Christopher Tandog
                 </h1>
-                <h2><span class="hero-highlight">Entry-Level Software Developer | Web & Game Development</span></h2>
+                <h2><span class="hero-highlight">Full Stack Software Developer | Web & Game Development</span></h2>
                 
                 <p class="hero-subtitle">
-                    BSIT graduate and aspiring software developer with hands-on experience in <strong>full-stack web development</strong> and <strong>game development</strong>. Passionate about building scalable, user-friendly applications and continuously learning modern technologies.
+                    BSIT graduate and aspiring software engineer with hands-on experience in <strong>full-stack web development</strong> and <strong>game development</strong>. Passionate about building scalable, user-friendly applications and continuously learning modern technologies.
                 </p>
 
                 <div class="hero-actions">
@@ -142,6 +142,7 @@
                 <div class="card"><i class="devicon-mysql-plain colored"></i>MySQL</div>
                 <div class="card"><i class="devicon-microsoftsqlserver-plain colored"></i>SQL Server</div>
                 <div class="card"><i class="devicon-postgresql-plain colored"></i>PostgreSQL</div>
+                <div class="card"><i class="devicon-postman-plain colored"></i>Postman</div>
                 <div class="card"><i class="devicon-firebase-plain colored"></i>Firebase</div>
                 <div class="card"><i class="devicon-godot-plain colored"></i> Godot</div>
                 <div class="card"><i class="devicon-renpy-plain colored"></i>RenPy</div>
@@ -152,6 +153,7 @@
                 <div class="card"><i class="devicon-mysql-plain colored"></i>MySQL</div>
                 <div class="card"><i class="devicon-microsoftsqlserver-plain colored"></i>SQL Server</div>
                 <div class="card"><i class="devicon-postgresql-plain colored"></i>PostgreSQL</div>
+                <div class="card"><i class="devicon-postman-plain colored"></i>Postman</div>
                 <div class="card"><i class="devicon-firebase-plain colored"></i>Firebase</div>
                 <div class="card"><i class="devicon-godot-plain colored"></i> Godot</div>
                 <div class="card"><i class="devicon-renpy-plain colored"></i>RenPy</div>
