added sonarqube skill

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             <div class="carousel-track reverse">
                 <div class="card"><i class="devicon-php-plain colored"></i> PHP</div>
                 <div class="card"><i class="devicon-spring-plain colored"></i> Spring</div>
+                <div class="card"><i class ="devicon-sonarqube-original colored"></i> SonarQube</div>
                 <div class="card"><i class="devicon-mysql-plain colored"></i>MySQL</div>
                 <div class="card"><i class="devicon-microsoftsqlserver-plain colored"></i>SQL Server</div>
                 <div class="card"><i class="devicon-postgresql-plain colored"></i>PostgreSQL</div>
@@ -150,6 +151,7 @@
                 <!-- Duplicates for seamless looping -->
                 <div class="card"><i class="devicon-php-plain colored"></i> PHP</div>
                 <div class="card"><i class="devicon-spring-plain colored"></i> Spring</div>
+                <div class="card"><i class ="devicon-sonarqube-original colored"></i> SonarQube</div>
                 <div class="card"><i class="devicon-mysql-plain colored"></i>MySQL</div>
                 <div class="card"><i class="devicon-microsoftsqlserver-plain colored"></i>SQL Server</div>
                 <div class="card"><i class="devicon-postgresql-plain colored"></i>PostgreSQL</div>
