updated head section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="A website portfolio of Ian Christopher Tandog">
+    <meta name="keywords" content="Web Developer, Web Designer, Game Developer, Software Engineer, Java Developer, Springboot Developer, Accenture Trainee, STI College Graduate, BSIT">
+    <meta name="author" content="Ian Christopher Tandog">
+
+    <meta property="og:title" content="Website Portfolio">
+    <meta property="og:description" content="A Website portfolio showcasing the skills Ian can offer">
+    <meta property="og:type" content="website">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ian Christopher Tandog - Website Portfolio</title>
     <link rel="stylesheet" href="/styles.css">
