added a crrently working on section

--- a/index.html
+++ b/index.html
@@ -251,6 +251,21 @@
         </div>
     </section>
 
+    <!-- Currently Building Section -->
+    <section class="current section" id="current">
+    <div class="container">
+        <div class="section-header">
+        <div class="section-badge">Now</div>
+        <h2 class="section-title">Currently Building</h2>
+        <p class="section-description">
+            A few things I’m actively working on and improving.
+        </p>
+        </div>
+
+        <div id="current-container" class="current-grid"></div>
+    </div>
+    </section>
+
     <!-- Project Modal -->
     <div id="projectModal" class="modal">
         <div class="modal-overlay"></div>
@@ -429,7 +444,7 @@
                         <textarea id="message" name="message" class="form-textarea" rows="5" 
                                   placeholder="Tell me about your project or how I can help..." required></textarea>
                     </div>
-                    
+                     
                     <button type="submit" class="form-submit" id="submitBtn">
                         <span id="submitText">Send Message</span>
                         <span>→</span>
